--- a/package.json
+++ b/package.json
@@ -4,20 +4,24 @@
   "description": "A simple WhatsApp pair web created by Sadaru",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --name Infinity-pair-site",
-    "stop": "pm2 stop Infinity-pair-site",
-    "restart": "pm2 restart Infinity-pair-site"
+    "start": "pm2 start index.js --deep-monitoring --attach --name infinity-pair-site",
+    "stop": "pm2 stop infinity-pair-site",
+    "restart": "pm2 restart infinity-pair-site"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.9",
     "awesome-phonenumber": "^7.2.0",
     "body-parser": "^1.20.3",
-    "express": "^4.21.2",
-    "megajs": "^1.3.5",
+    "@hapi/boom": "^10.0.1",
+    "@whiskeysockets/baileys": "^6.7.9",
+    "axios": "^1.7.9",
+    "express": "latest",
     "path": "^0.12.7",
+    "megajs": "^1.3.5",
+    "pino": "^8.15.0",
     "phone": "^3.1.57",
-    "pino": "^9.6.0",
-    "pm2": "^5.4.3",
+    "pm2": "^5.2.0",
     "qrcode": "^1.5.4"
+    "util": "^0.12.4",
+    "vm2": "^3.9.19"
   }
 }
