--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
-  "name": "Infinity-pair-site",
-  "version": "1.0",
-  "description": "A simple WhatsApp pair web created by Sadaru",
-  "main": "index.js",
-  "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --name infinity-pair-site",
-    "stop": "pm2 stop infinity-pair-site",
-    "restart": "pm2 restart infinity-pair-site"
-  },
+"name": "infinity-web-pair",
+    "version": "0.0.1",
+    "description": "A multi functional whatsapp bot Web paircode.",
+    "main": "index.js",
+    "scripts": {
+      "start": "pm2 start index.js --deep-monitoring --attach --name infinity",
+      "stop": "pm2 stop infinity",
+     "restart": "pm2 restart infinity"
+    },
   "dependencies": {
-    "awesome-phonenumber": "^7.2.0",
-    "body-parser": "^1.20.3",
-    "@hapi/boom": "^10.0.1",
-    "@whiskeysockets/baileys": "^6.7.9",
-    "axios": "^1.7.9",
-    "express": "latest",
+    "@whiskeysockets/baileys": "6.6.0",
+    "qrcode": "^1.5.3",
+    "awesome-phonenumber": "^2.64.0",
+    "pino": "^8.1.0",
+    "phone" : "3.1.30",
+    "body-parser": "^1.20.1",
+    "express": "^4.18.1",
     "path": "^0.12.7",
-    "megajs": "^1.3.5",
-    "pino": "^8.15.0",
-    "phone": "^3.1.57",
-    "pm2": "^5.2.0",
-    "qrcode": "^1.5.4"
-    "util": "^0.12.4",
-    "vm2": "^3.9.19"
-  }
+    "megajs": "^1.1.0",
+    "pm2": "^5.2.0"
+   }
 }
