--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
      "restart": "pm2 restart infinity"
     },
   "dependencies": {
-    "@whiskeysockets/baileys": "6.6.0",
+    "@whiskeysockets/baileys": "6.7.9",
     "qrcode": "^1.5.3",
     "awesome-phonenumber": "^2.64.0",
     "pino": "^8.1.0",
@@ -17,7 +17,7 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.1",
     "path": "^0.12.7",
-    "megajs": "^1.1.0",
-    "pm2": "^5.2.0"
+    "megajs": "1.3.5",
+    "pm2": "5.4.3"
    }
 }
